// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Registry factory can add vault 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 47965,
}
`;

exports[`Registry owner can add factory 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 47487,
}
`;

exports[`Registry owner can register implementation contract 1`] = `
Object {
  "calldataByteLength": 68,
  "gasUsed": 48172,
}
`;

exports[`Registry owner can remove factory 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 25600,
}
`;
